--- a/meh.html
+++ b/meh.html
@@ -31,8 +31,8 @@
             </div>
         </div>
 
-        <div class="otra">
-            <p>¡Otra vez!</p>
+         <div  class="otra">
+            <p id="cerrar">¡Otra vez!</p>
         </div>
   
     </div>
